# ofshore-mcp

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: server.py
