[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofshore-mcp"
version = "1.0.0"
description = "MCP Server for ofshore.dev autonomous ecosystem"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27",
    "fastmcp>=2.0.0",
]

[project.scripts]
ofshore-mcp = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src"]
